--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -33,7 +33,7 @@
         "\n",
         "- Fine Tuning : creiamo un dataset di Fine Tuning, e ri alleniamo il modello di GenAI su questi dati. Presenta pregi e difetti. Ne parliamo in un altro notebook.\n",
         "\n",
-        "- Retrieve and Generate : forniamo al modello le informazioni complementari direttamente durante l'inferenza. E' il paradigma che affronteremo in questo notebook."
+        "- Retrieve Augmented Generation : forniamo al modello le informazioni complementari direttamente durante l'inferenza. E' il paradigma che affronteremo in questo notebook."
       ]
     },
     {
