aggiunte query di base a notebook flask-sqlalchemy

--- a/ORM_SQLalchemy.ipynb
+++ b/ORM_SQLalchemy.ipynb
@@ -96,13 +96,13 @@
    "outputs": [],
    "source": [
     "class Utente(db.Model):\n",
-    "    id = db.Column(db.Integer, primary_key=True)\n",
+    "    id = db.Column(db.Integer, primary_key=True, autoincrement=True)\n",
     "    username = db.Column(db.String(80), unique=True, nullable=False)\n",
     "    email = db.Column(db.String(120), unique=True, nullable=False)\n",
     "    details = db.Column(db.Text, nullable=True)\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return f\"ID: {self.id} , Username: {self.username}\"\n",
+    "        return f\"ID: {self.id} | Username: {self.username}\"\n",
     "\n",
     "\n",
     "with app.app_context():\n",
@@ -117,7 +117,7 @@
     "  \n",
     "`class Utente(db.Model)`: Con questa riga sto creando una classe, ereditando le caratteristiche della superclasse db.Model. In poche parole sto dicendo a Python che questa classe sarà un model, e che eredita tutti i metodi e attributi della classe Model di SQLAlchemy  \n",
     "  \n",
-    "`id = db.Column(db.Integer, primary_key=True)`: qua sto definendo il primo attributo del mio model. L'id sarà infatti una colonna del DB (db.Column), sarà un **intero** (db.Integer), e sarà la **primary key** della tabella (primary_key=True)  \n",
+    "`id = db.Column(db.Integer, primary_key=True)`: qua sto definendo il primo attributo del mio model. L'id sarà infatti una colonna del DB (db.Column), se non passato esplicitamente sarà **autoincrementale** (autoincrement=True), sarà un **intero** (db.Integer), e sarà la **primary key** della tabella (primary_key=True)  \n",
     "  \n",
     "`username = db.Column(db.String(80), unique=True, nullable=False)`: qua definiamo un altro attributo. Questo attributo sarà una stringa di lunghezza massima 80 (db.String(80)) [la lunghezza si può omettere, ma fissare una lunghezza massima è preferibile per ottimizzare il db]. Questo attributo deve essere **unico** (unique=True), e non può mai essere vuoto (nullable=False). Per l'attributo email valgono le stesse considerazioni.  \n",
     "  \n",
@@ -150,9 +150,19 @@
    "source": [
     "with app.app_context():\n",
     "    \n",
-    "    nuovo_utente = Utente(id=1, username=\"MogliaL\", email=\"lorenzo.moglia@tasgroup.eu\")\n",
+    "    nuovo_utente = Utente(username=\"MogliaL\", email=\"lorenzo.moglia@tasgroup.eu\") # non metto nessun detail, mentre l'id è generato automaticamentr\n",
     "    db.session.add(nuovo_utente)\n",
     "    db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bene, abbiamo creato il nostro primo utente!  \n",
+    "Ora, come faccio a controllare quanti utenti ho attualmente nel mio db? Posso controllarlo facendo una query sul mio model, che mi restituisca tutti gli utenti, con la rappresentazione che ho definito all'interno del metodo `__repr__`.  \n",
+    "  \n",
+    "Per vedere tutti gli oggetti di un certo model, utilizzo il metodo `<model>.query.all()`."
    ]
   },
   {
@@ -164,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ID: 1 , Username:MogliaL]\n"
+      "[ID: 1 | Username: MogliaL]\n"
      ]
     }
    ],
@@ -178,7 +188,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# work in progresso......."
+    "Eccolo qua! Però un'applicazione con un solo user è abbastanza triste. Ogni applicazione ha bisogno di un utente admin, di un moderatore, e di alcuni utenti base o premium. Creiamoli, insieme  !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with app.app_context():\n",
+    "    utente_admin = Utente(username=\"admin\", email=\"admin@applicazione.tech\", details=\"admin user - superuser\")\n",
+    "    db.session.add(utente_admin)\n",
+    "    utente_mod = Utente(username=\"mod\", email=\"mod@applicazione.tech\", details=\"admin user - moderator\")\n",
+    "    db.session.add(utente_mod)\n",
+    "    utente_user1 = Utente(username=\"Mario_Rossi\", email=\"user1@applicazione.tech\", details=\"premium user\")\n",
+    "    db.session.add(utente_user1)\n",
+    "    utente_user2 = Utente(username=\"Pietro_Verdi\", email=\"user2@applicazione.tech\", details=\"premium user\")\n",
+    "    db.session.add(utente_user2)\n",
+    "    utente_user3 = Utente(username=\"Bonaventura_Larda\", email=\"user3@applicazione.tech\") \n",
+    "    db.session.add(utente_user3)\n",
+    "    # se voglio aggiungere altri utenti, posso farlo qua, all'interno della stessa sessione di connessione al db. Il commit va eseguito una sola volta per sessione, e scrive sul db tutte le operazioni avvenute nella stessa sessione\n",
+    "    db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vediamo ora tutti gli utenti dell'applicazione:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ID: 1 | Username: MogliaL, ID: 2 | Username: admin, ID: 3 | Username: mod, ID: 4 | Username: Mario_Rossi, ID: 5 | Username: Pietro_Verdi, ID: 6 | Username: Bonaventura_Larda]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with app.app_context():\n",
+    "    users = Utente.query.all()\n",
+    "    print(users) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Diciamo che ora voglio caricare l'utente che risponde al nome di Mario Rossi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 4 | Username: Mario_Rossi\n"
+     ]
+    }
+   ],
+   "source": [
+    "with app.app_context():\n",
+    "    user = Utente.query.filter_by(username='Mario_Rossi').first()\n",
+    "    print(user)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OK! Ora carichiamo tutti i premium users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ID: 4 | Username: Mario_Rossi, ID: 5 | Username: Pietro_Verdi]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with app.app_context():\n",
+    "    premium_users = Utente.query.filter_by(details='premium user').all()\n",
+    "    print(premium_users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abbiamo visto che sia mod che admin hanno nei details \"admin user - {ruolo}\". Andiamo a fare una query che carica tutti gli utenti i cui details **contengano** la dicitura \"admin user\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ID: 2 | Username: admin, ID: 3 | Username: mod]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with app.app_context():\n",
+    "    admin_users = Utente.query.filter(Utente.details.like('%admin user%')).all()\n",
+    "    print(admin_users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# work in progress..."
    ]
   },
   {
